# clearforge-website

./: .env.example  .gitignore  BRAND-V5.md  CLAUDE.md  CONTRIBUTING.md  PRD.json  REDESIGN-BRIEF.md  V3-REBUILD-BRIEF.md  V5-DESIGN-BRIEF.md  biome.json  cf-chunk.js  cf-screenshots.js  lighthouserc.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vitest.config.ts
.claude/: launch.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: hero-video-automation.md
docs/research/: 2026-05-03-extra-research-brief.md  2026-05-06-premium-visual-system.md
e2e/: blueprint.spec.ts  homepage.spec.ts  navigation.spec.ts  route-integrity.spec.ts  scorecard.spec.ts
mockups/: index.html  option-a.html  option-b.html  option-c.html  option-d.html  option-e.html  package-lock.json  package.json
public/videos/: hero.webm
scripts/: check-media-budget.mjs  generate-clean-hero-loop.mjs  generate-hero-video.mjs
scripts/video-prompts/: clearforge-hero.json  clearforge-use-cases.json
src/agents/: ceo_supervisor.py  coding_team.py
src/api/: server.py
src/app/: apple-icon.tsx  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: case-study-detail.tsx  case-study-story.tsx  insight-detail.tsx  (+6 more)
supabase/: create_analytics_events_table.sql  create_leads_table.sql
tasks/: prd-ai-transformation-partner-redesign.md  prd-v7-redesign.md  prd-zero-base-redesign.md
tests/: conftest.py  test_coding_team.py  test_website_intelligence.py
(+221 files in other folders)
